[project]
requires-python = ">=3.10"
name = "bounce"
dynamic = [
  "version"
]
readme = "README.md"
description = "Search using special commands"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "datatypes",
  "endpoints",
]
license = { text = "MIT" }

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]
include = [
  "bounce*"
]

[project.scripts]
bounce = "bounce.__main__:application"

[tool.setuptools.dynamic]
version = { attr = "bounce.__version__" }

[project.urls]
Repository = "https://github.com/Jaymon/bounce"
Homepage = "http://github.com/Jaymon/bounce"

[project.optional-dependencies]
tests = [
  "testdata",
]
asgi = [
  "daphne"
]


